@@ -1,3 +1,8 @@
+Sun Jan 16  8:57:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
+
+	* Source/NSWindow.m: Don't log DnD stuff unless NSDragging logging
+	is requested using '--GNU-Debug=NSDragging'
+
 Sat Jan 15 11:55:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>
 
 	* Source/NSBrowser.m: Don't permit scrolling by negative values.
